--- a/node/public/gakf/sickDetail.html
+++ b/node/public/gakf/sickDetail.html
@@ -20,6 +20,7 @@
 		  </li>
 		</ul>
 		<div class="spacer10"></div>
+		<span style="padding:5px 0px;display: inline-block;">患者基本信息（患者填写）</span>
 		<ul class="list-group">
 		  <li class="list-group-item gray">
 		  	<span>患者姓名</span>
@@ -28,6 +29,14 @@
 		  <li class="list-group-item">
 		  	<span>年龄</span>
 		  	<span class="right">{{d.age}}岁</span>
+		  </li>
+		  <li class="list-group-item gray">
+		  	<span>身高</span>
+		  	<span class="right">{{d.height}}cm</span>
+		  </li>
+		  <li class="list-group-item">
+		  	<span>体重</span>
+		  	<span class="right">{{d.weight}}kg</span>
 		  </li>
 		  <li class="list-group-item gray">
 		  	<span>性别</span>
@@ -44,14 +53,6 @@
 		  <li class="list-group-item">
 		  	<span>床号</span>
 			<span class="right">{{d.bed_id}}</span>
-		  </li>
-		  <li class="list-group-item gray">
-		  	<span>入院日期</span>
-		  	<span class="right">{{ d.in_day | date("yyyy年MM月dd日")}}</span>
-		  </li>
-		  <li class="list-group-item">
-		  	<span>出院日期</span>
-			<span class="right">{{d.out_day | date("yyyy年MM月dd日")}}</span>
 		  </li>
 		</ul>
 		<span style="padding:5px 0px;display: inline-block;">安全用药</span>
@@ -73,7 +74,7 @@
 		  		</a>
 		 	</li>
 		</ul>
-		<span style="padding:5px 0px;display: inline-block;">医学量表</span>
+		<span style="padding:5px 0px;display: inline-block;">患者自评量表（患者填写）</span>
 		<ul class="list-group">
 			<li class="list-group-item">
 		  		<a ms-href="/gakf/rapt.html?sick_id={{d.sickId}}">
@@ -84,14 +85,7 @@
   					<span class="right orange sl8" ms-if="d.caprini == ''&& d.rapt==''">无评分</span>
 		  		</a>
 		 	</li>
-		 	<li class="list-group-item">
-		  		<a ms-href="/gakf/hss_left.html?sick_id={{d.sickId}}">
-  			  		<span>膝关节HSS评分 </span>
-  					<span class="right glyphicon glyphicon-chevron-right gray_arrow"></span>
-  					<span class="right orange sl8" ms-if="d.hss!=''">{{d.hss}}</span>
-  					<span class="right orange sl8" ms-if="!d.hss">点击填写</span>
-		  		</a>
-		 	</li>
+		 	
 		 	<li class="list-group-item">
 		  		<a ms-href="/gakf/rapt.html?sick_id={{d.sickId}}">
   			  		<span>出血评分 </span>
@@ -102,8 +96,24 @@
 		 	</li>
 		</ul>
 		<div ms-visible="d.isvisible">
-			<span style="padding:5px 0px;display: inline-block;">长期登记量表</span>
+			<span style="padding:5px 0px;display: inline-block;">长期登记量表（医生填写）</span>
 			<ul class="list-group">
+				<li class="list-group-item gray">
+				  	<span>入院日期</span>
+				  	<input class="right text-right my-input1 gray" ms-duplex="d.in_day" >
+				</li>
+				<li class="list-group-item">
+				  	<span>出院日期</span>
+					<input class="right text-right my-input1" ms-duplex="d.out_day" >
+				</li>
+				<li class="list-group-item">
+			  		<a ms-href="/gakf/hss_left.html?sick_id={{d.sickId}}">
+	  			  		<span>膝关节HSS评分 </span>
+	  					<span class="right glyphicon glyphicon-chevron-right gray_arrow"></span>
+	  					<span class="right orange sl8" ms-if="d.hss!=''">{{d.hss}}</span>
+	  					<span class="right orange sl8" ms-if="!d.hss">点击填写</span>
+			  		</a>
+			 	</li>
 				<li class="list-group-item">
 			  		<a ms-href="/gakf/before.html?sick_id={{d.sickId}}">
 	  			  		<span>术前骨科筛查量表</span>
@@ -142,13 +152,16 @@
 	<nav class="navbar navbar-default navbar-fixed-bottom my-nav my-nav-bottom" ms-visible="d.isvisible" ms-if="!d.isout">
 	  <div class="container text-center" style="height: 42px; line-height: 42px;">
 	    <div class="row">
-	    	<div class="col-xs-6 text-left">
+	    	<div class="col-xs-4 text-left">
+	    		<span style="color:#fff;" ms-click="save">保存</span>
+	    	</div>
+	    	<div class="col-xs-4 text-left">
 
 	    		<a ms-href="/gakf/check.html?sick_id={{d.sickId}}&doctor_id={{d.doctor_id}}">
 			    	<span style="color:#fff;" >诊疗记录</span>
 			    </a>
 	    	</div>
-	    	<div class="col-xs-6 text-right">
+	    	<div class="col-xs-4 text-right">
 
 	    		<a ms-href="/gakf/print.html?sick_id={{d.sickId}}&doctor_id={{d.doctor_id}}">
 			    	<span style="color:#fff;" >打印床头卡</span>
@@ -157,6 +170,7 @@
 	    </div>
 	  </div>
 	</nav>
+	<div  id ="commesCom" style="display:none;" class=" alert alert-success" role="alert"></div>
 	<script type="text/javascript">
 		require(["store","avalon"],function(store){
 				var data={isvisible:false,
@@ -173,7 +187,27 @@
 				
 			    var vmodel = avalon.define({
 			          $id: "test",
-			          d:data
+			          d:data,
+			           save:function(){
+			          	var d = JSON.stringify(vmodel.d.$model);
+			          	$.ajax({
+			          		type:"post",
+							url: "/sick/create",
+							dataType: "json", 
+							data:{sick:d},
+							success: function(d){
+								if(d.success){
+									$("#commesCom").html("保存成功").show();
+									setTimeout(function(){
+										$("#commesCom").html("").hide();
+									},1500);
+								}
+				    		},
+				    		error:function(){
+
+				    		}
+			          	})
+			          }
 			    });
 			    avalon.scan();
 			    $.ajax({ 
@@ -181,6 +215,8 @@
 					url: "/sick/info?id="+id,
 					dataType: "json", 
 					success: function(obj){
+						obj.content.in_day = new Date(obj.content.in_day).Format("yyyy-MM-dd");
+						obj.content.out_day = new Date(obj.content.out_day).Format("yyyy-MM-dd");
 						vmodel.d = $.extend(data,obj.content);
 						if(temp.type == "doctor"){
 							$.ajax({ 
@@ -188,6 +224,7 @@
 								url: "/sick/sickscore?sick_id="+id,
 								dataType: "json", 
 								success: function(obj){
+
 									vmodel.d = $.extend(vmodel.d.$model,obj.content);
 					    		},
 					    		error:function(){
