--- a/node/public/gakf/sick.html
+++ b/node/public/gakf/sick.html
@@ -32,7 +32,14 @@
 			  </div>
 			</div>
 		</a>
+		<div class="row ads">
+			<div class="col-xs-12">
+				<span>此处显示广告</span>
+				<span class="close right">x</span>
+			</div>
+		</div>
 	</div>
+
 	<script type="text/javascript">
 	require(["store","avalon"],function(store){
 			var data = [],doctor_id = store.get("user").id;
@@ -54,6 +61,9 @@
 			}); 
 		    $("#addSick").on("touchstart",function(){
 		    	$(this).attr("href","addSick.html?doctor_id="+doctor_id);
+		    });
+		    $(".close").on("touchstart",function(){
+		    	$(this).parent().parent().remove();
 		    });
 	})
 	</script>
