--- a/node/public/gakf/cxgwpg.html
+++ b/node/public/gakf/cxgwpg.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width,initial-scale=1.0 user-scalable=yes"/>
-	<title>膝关节HHS评分</title>
+	<title>出血高危评估</title>
 	<link rel="stylesheet" type="text/css" href="./static/css/bootstrap.min.css">
 	<link rel="stylesheet" type="text/css" href="./static/css/index.css">
 	<script type="text/javascript" src="./static/js/require.js"></script>
@@ -11,25 +11,13 @@
 	<script type="text/javascript" src="./static/js/resource.js"></script>
 </head>
 <body ms-controller="test" class="ms-controller">
-
 	<div class="" id="gradeList">
-		<nav class="navbar navbar-default navbar-fixed-top my-nav my-nav-top">
-		  <div id="my-tab">
-		    <div class="col-xs-6 text-center my-nav-line selected">
-		    	<a href="javascript:void(0)">左腿</a>
-		    </div>
-		    <div class="col-xs-6 text-center my-nav-line">
-		    	<a ms-href="/gakf/hss_right.html?sick_id={{d.id}}">右腿</a>
-		    </div>
-		  </div>
-		</nav>
-		<div style="margin-top:45px;"></div>
-		<span class="my-title" ms-if="d.summary!=''">{{d.summary}}</span>
+		<span class="my-title" ms-if="d.summary!=''">{{d.summary|html}}</span>
 		<div class="spacer5" ms-if="d.summary==''"></div>
 		<div  ms-repeat-el="d.items"  ms-attr-alt="{{$index}}">
 			<span class="my-title">{{el.title}}</span>
-			<ul class="list-group " ms-if="el.type == 'radio'">
-			  <li class="list-group-item radio" ms-repeat-el="el.keys"  ms-click="click">
+			<ul class="list-group " ms-if="el.type == 'checkbox'">
+			  <li class="list-group-item checkbox" ms-repeat-el="el.keys"  ms-click="click">
 			  	<div class="col-xs-8">
 			  		<span class="qtitle">{{el.key}}</span>
 			  	</div>
@@ -65,42 +53,75 @@
 	<script type="text/javascript">
 		require(["store","avalon","index"],function(store){
 			Zhi.detectGesture(document.getElementById('gradeList'), ['tap']);
-			$("#gradeList").on("tap",".radio",function(){
-				var temp = $(this).find(".tag"),p=$(this).parent().parent();
-				if(p.data("selected"))RC.remove(p.data("selected"));
+			$("#gradeList").on("tap",".checkbox",function(){
+				var temp = $(this).find(".tag");
 				RC.selected(this,temp.attr("alt"));
-				p.data("selected",this);
 			});
 
 			var data = {},tempobj={}; //sick has save btn doctor hasn't save btn
 			var temp = store.get("user"),id="";
 			if(temp.type =="doctor"){
-				data.isshow = true;
-			}else {
 				data.isshow = false;
+			}else {
+				data.isshow = true;
 			}
 			id = RC.parseOptions(window.location.href).sick_id;
 			var vmodel ;
 			
-			$.ajax({ 
-				type:"get",
-				url: "/sick/sickstatus?table_type=hss_left&sick_id="+id,
-				dataType: "json", 
-				success: function(obj){
-					obj.content.value = $.parseJSON(obj.content.value);
-					tempobj = obj.content;
-					var d = obj.content.value;
+			// $.ajax({ 
+			// 	type:"get",
+			// 	url: "/sick/sickstatus?table_type=caprini&sick_id="+id,
+			// 	dataType: "json", 
+			// 	success: function(obj){
+					// obj.content.value = $.parseJSON(obj.content.value);
+					tempobj = {
+					  "title":"出血高危评估",
+					  "summary":"",
+					  "items":[
+					   {
+					     "title":"是否出血高危人群",
+					     "summary":"",
+					     "type":"checkbox",
+					     "keys":[
+					     {"key":"自己或者家族性有凝血障碍疾病","value":""},
+					     {"key":"有易出血症状(例如血流不止或者皮肤容易瘀斑等)","value":""},
+					     {"key":"手术之前使用过任何抗凝治疗(抗血小板治疗或者抗凝治疗)","value":""}
+					     ],
+					     "value":"",
+					     "scored":false,
+					     "checkedStyle":"none"
+					    }]
+					  };
+					var d = {
+					  "title":"出血高危评估",
+					  "summary":"",
+					  "items":[
+					   {
+					     "title":"是否出血高危人群",
+					     "summary":"",
+					     "type":"checkbox",
+					     "keys":[
+					     {"key":"自己或者家族性有凝血障碍疾病","value":""},
+					     {"key":"有易出血症状(例如血流不止或者皮肤容易瘀斑等)","value":""},
+					     {"key":"手术之前使用过任何抗凝治疗(抗血小板治疗或者抗凝治疗)","value":""}
+					     ],
+					     "value":"",
+					     "scored":false,
+					     "checkedStyle":"none"
+					    }]
+					  };
 					d.isshow = data.isshow;
 					d.id = id;
 					d.type = temp.type;
 					RC.setvmodel(d,tempobj);
 					RC.setItem(d);
 					
-	    		},
-	    		error:function(){
+	  //   		},
+	  //   		error:function(){
 
-	    		}
-			}); 
+	  //   		}
+			// }); 
+
 		});
 	</script>
 </body>
