--- a/node/public/gakf/inpatientSick.html
+++ b/node/public/gakf/inpatientSick.html
@@ -127,6 +127,13 @@
 	  					<span class="right orange sl8" >点击填写</span>
 			  		</a>
 			 	</li>
+			 	<li class="list-group-item">
+			  		<a ms-href="{{d.cxpgUrl}}">
+	  			  		<span>出血评估 </span>
+	  					<span class="right glyphicon glyphicon-chevron-right gray_arrow"></span>
+	  					<span class="right orange sl8" >点击填写</span>
+			  		</a>
+			 	</li>
 			</ul>
 			<div  id ="commesCom" style="display:none;" class=" alert alert-success" role="alert"></div>
 			<div class="row ads">
@@ -162,12 +169,13 @@
 	            "in_day":"",
 	            "out_day":"",
 	            "doctor_name": "",
-	            "vteUrl":"dd"
+	            "vteUrl":"dd",
+	            "cxpgUrl":""
 			}
 			var temp = store.get("user");
 			var id = temp.id,doctor_id = temp.doctor_id;
 			data.sickId = id;
-
+			data.cxpgUrl = "/gakf/cxgwpg.html?sick_id="+id;
 			var vmodel = avalon.define({
 	          $id: "test",
 	          d:data,
@@ -229,9 +237,9 @@
 				}); 
 		    }
 		    function setUrl(){
-		    	if(vmodel.d.operate_type=="关节手术"){
+		    	if(vmodel.d.operate_type=="关节手术" || vmodel.d.operate_type=="其他"){
 					vmodel.d.vteUrl = "/gakf/caprini.html?sick_id="+data.sickId;
-				}else if(vmodel.d.operate_type=="创伤手术" || vmodel.d.operate_type=="其他"){
+				}else if(vmodel.d.operate_type=="创伤手术" ){
 				    vmodel.d.vteUrl = "/gakf/rapt.html?sick_id="+data.sickId;
 				}
 		    }
