--- a/node/public/gakf/sickDetail.html
+++ b/node/public/gakf/sickDetail.html
@@ -88,7 +88,7 @@
 		 	
 		 	<li class="list-group-item">
 		  		<a ms-href="/gakf/rapt.html?sick_id={{d.sickId}}">
-  			  		<span>出血评分 </span>
+  			  		<span>出血评估 </span>
   					<span class="right glyphicon glyphicon-chevron-right gray_arrow"></span>
   					<span class="right orange sl8" ms-if="d.rapt!=''">{{d.rapt}}</span>
   					<span class="right orange sl8" ms-if="!d.rapt">高出血倾向</span>
@@ -108,7 +108,7 @@
 				</li>
 				<li class="list-group-item">
 			  		<a ms-href="/gakf/hss_left.html?sick_id={{d.sickId}}">
-	  			  		<span>膝关节HSS评分 </span>
+	  			  		<span>膝关节HHS评分 </span>
 	  					<span class="right glyphicon glyphicon-chevron-right gray_arrow"></span>
 	  					<span class="right orange sl8" ms-if="d.hss!=''">{{d.hss}}</span>
 	  					<span class="right orange sl8" ms-if="!d.hss">点击填写</span>
