--- a/node/public/gakf/help_sick.html
+++ b/node/public/gakf/help_sick.html
@@ -4,11 +4,24 @@
 	<meta charset="UTF-8">
 	<title>患者帮助文档</title>
 	<meta name="viewport" content="width=device-width,initial-scale=1.0 user-scalable=yes"/>
+	<link rel="stylesheet" type="text/css" href="./static/css/bootstrap.min.css">
+	<link rel="stylesheet" type="text/css" href="./static/css/index.css">
 	<style type="text/css">
 	img{width: 100%;}
 	</style>
 </head>
 <body>
+	<nav class="navbar navbar-default navbar-fixed-top my-nav my-nav-top" >
+	  <div id="my-tab">
+	    <div class="col-xs-6 text-center my-nav-line">
+	    	<a href="/gakf/help.html">医生帮助</a>
+	    </div>
+	    <div class="col-xs-6 text-center my-nav-line selected">
+	    	<a href="javascript:void(0)">患者帮助</a>
+	    </div>
+	  </div>
+	</nav>
+	<div style="margin-top:45px;"></div>
 	<img src="./static/images/help_sick.jpg">
 </body>
 </html>
