--- a/node/public/gakf/help.html
+++ b/node/public/gakf/help.html
@@ -3,23 +3,25 @@
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width,initial-scale=1.0 user-scalable=yes"/>
-	<title>帮助</title>
-	<script type="text/javascript" src="./static/js/require.js"></script>
-	<script type="text/javascript" src="./static/js/main.js"></script>
-	<script type="text/javascript" src="./static/js/resource.js"></script>
+	<title>医生帮助</title>
+	<link rel="stylesheet" type="text/css" href="./static/css/bootstrap.min.css">
+	<link rel="stylesheet" type="text/css" href="./static/css/index.css">
+	<style type="text/css">
+	img{width: 100%;}
+	</style>
 </head>
 <body>
-	
-	<script type="text/javascript">
-	require(["store"],function(store){
-		var data={},user=store.get("user");
-		if(user.type == "doctor"){
-			window.location.href = "/gakf/help_doctor.html";
-		}else{
-			window.location.href = "/gakf/help_sick.html";
-		}
-
-	});
-	</script>
+	<nav class="navbar navbar-default navbar-fixed-top my-nav my-nav-top" >
+	  <div id="my-tab">
+	    <div class="col-xs-6 text-center my-nav-line selected">
+	    	<a href="javascript:void(0)">医生帮助</a>
+	    </div>
+	    <div class="col-xs-6 text-center my-nav-line">
+	    	<a  href="/gakf/help_sick.html">患者帮助</a>
+	    </div>
+	  </div>
+	</nav>
+	<div style="margin-top:45px;"></div>
+	<img src="./static/images/help_sick.jpg">
 </body>
 </html>
