--- a/node/public/gakf/sickDetail.html
+++ b/node/public/gakf/sickDetail.html
@@ -55,25 +55,7 @@
 			<span class="right">{{d.bed_id}}</span>
 		  </li>
 		</ul>
-		<span style="padding:5px 0px;display: inline-block;">安全用药</span>
-		<ul class="list-group">
-			<li class="list-group-item">
-		  		<a ms-href="/gakf/taboos.html?sick_id={{d.sickId}}">
-  			  		<span>安全用药量表</span>
-  					<span class="right glyphicon glyphicon-chevron-right gray_arrow"></span>
-  					<span class="right orange sl8" ms-if="d.select_count!=''">共 {{d.select_count}} 项用药禁忌</span>
-  					<span class="right orange sl8" ms-if="!d.select_count">无用药禁忌</span>
-		  		</a>
-		 	</li>
-		 	<li class="list-group-item">
-		  		<a ms-href="/gakf/recommend.html?sick_id={{d.sickId}}">
-  			  		<span>安全用药建议 </span>
-  					<span class="right glyphicon glyphicon-chevron-right gray_arrow"></span>
-  					<span class="right orange sl8" ms-if="d.drug_count!=''">共 {{d.drug_count}} 条建议</span>
-  					<span class="right orange sl8" ms-if="!d.drug_count">无建议</span>
-		  		</a>
-		 	</li>
-		</ul>
+		
 		<span style="padding:5px 0px;display: inline-block;">患者自评量表（患者填写）</span>
 		<ul class="list-group">
 			<li class="list-group-item">
@@ -90,8 +72,27 @@
 		  		<a ms-href="/gakf/rapt.html?sick_id={{d.sickId}}">
   			  		<span>出血评估 </span>
   					<span class="right glyphicon glyphicon-chevron-right gray_arrow"></span>
-  					<span class="right orange sl8" ms-if="d.rapt!=''">{{d.rapt}}</span>
-  					<span class="right orange sl8" ms-if="!d.rapt">高出血倾向</span>
+  					<span class="right orange sl8" ms-if="d.cxpg!=''">{{d.cxpg}}</span>
+  					<span class="right orange sl8" ms-if="!d.cxpg">2项目出血风险</span>
+		  		</a>
+		 	</li>
+		</ul>
+		<span style="padding:5px 0px;display: inline-block;">安全用药</span>
+		<ul class="list-group">
+			<!-- <li class="list-group-item">
+		  		<a ms-href="/gakf/taboos.html?sick_id={{d.sickId}}">
+  			  		<span>安全用药量表</span>
+  					<span class="right glyphicon glyphicon-chevron-right gray_arrow"></span>
+  					<span class="right orange sl8" ms-if="d.select_count!=''">共 {{d.select_count}} 项用药禁忌</span>
+  					<span class="right orange sl8" ms-if="!d.select_count">无用药禁忌</span>
+		  		</a>
+		 	</li> -->
+		 	<li class="list-group-item">
+		  		<a ms-href="/gakf/recommend.html?sick_id={{d.sickId}}">
+  			  		<span>安全用药建议 </span>
+  					<span class="right glyphicon glyphicon-chevron-right gray_arrow"></span>
+  					<span class="right orange sl8" ms-if="d.drug_count!=''">共 {{d.drug_count}} 条建议</span>
+  					<span class="right orange sl8" ms-if="!d.drug_count">无建议</span>
 		  		</a>
 		 	</li>
 		</ul>
@@ -106,14 +107,7 @@
 				  	<span>出院日期</span>
 					<input class="right text-right my-input1" ms-duplex="d.out_day" >
 				</li>
-				<li class="list-group-item">
-			  		<a ms-href="/gakf/hss_left.html?sick_id={{d.sickId}}">
-	  			  		<span>膝关节HHS评分 </span>
-	  					<span class="right glyphicon glyphicon-chevron-right gray_arrow"></span>
-	  					<span class="right orange sl8" ms-if="d.hss!=''">{{d.hss}}</span>
-	  					<span class="right orange sl8" ms-if="!d.hss">点击填写</span>
-			  		</a>
-			 	</li>
+				
 				<li class="list-group-item">
 			  		<a ms-href="/gakf/before.html?sick_id={{d.sickId}}">
 	  			  		<span>术前骨科筛查量表</span>
@@ -133,6 +127,14 @@
 	  			  		<span>术后骨科筛查量表</span>
 	  					<span class="right glyphicon glyphicon-chevron-right gray_arrow"></span>
 	  					<span class="right orange sl8">点击填写</span>
+			  		</a>
+			 	</li>
+			 	<li class="list-group-item">
+			  		<a ms-href="/gakf/hss_left.html?sick_id={{d.sickId}}">
+	  			  		<span>膝关节HHS评分 </span>
+	  					<span class="right glyphicon glyphicon-chevron-right gray_arrow"></span>
+	  					<span class="right orange sl8" ms-if="d.hss!=''">{{d.hss}}</span>
+	  					<span class="right orange sl8" ms-if="!d.hss">点击填写</span>
 			  		</a>
 			 	</li>
 			</ul>
