--- a/node/public/gakf/inpatientSick.html
+++ b/node/public/gakf/inpatientSick.html
@@ -34,7 +34,7 @@
 		  <li class="list-group-item">
 		  	<span>身高</span>
 		  	<span class="right">
-		  		<input class=" text-right my-input1" type="text" placeholder="身高" ms-duplex="d.hight"/> cm
+		  		<input class=" text-right my-input1" type="text" placeholder="身高" ms-duplex="d.height"/> cm
 		  	</span>
 		  </li>
 		  <li class="list-group-item">
