update register vte

--- a/node/public/gakf/caprini.html
+++ b/node/public/gakf/caprini.html
@@ -15,10 +15,10 @@
 	<nav class="navbar navbar-default navbar-fixed-top my-nav my-nav-top">
 	  <div id="my-tab">
 	    <div class="col-xs-6 text-center my-nav-line ">
-	    	<a ms-href="/gakf/rapt.html?sick_id={{d.id}}">RAPT 量表</a>
+	    	<a ms-href="/gakf/rapt.html?sick_id={{d.id}}">RAPT 量表(创伤)</a>
 	    </div>
 	    <div class="col-xs-6 text-center my-nav-line selected">
-	    	<a ms-href="javascript:void(0)">Caprini 量表</a>
+	    	<a ms-href="javascript:void(0)">Caprini 量表(关节)</a>
 	    </div>
 	  </div>
 	</nav>
