--- a/node/public/gakf/sickDetail.html
+++ b/node/public/gakf/sickDetail.html
@@ -137,7 +137,7 @@
 			 	</li>
 			 	<li class="list-group-item">
 			  		<a ms-href="/gakf/hss_left.html?sick_id={{d.sickId}}">
-	  			  		<span>膝关节HHS评分 </span>
+	  			  		<span>膝关节HSS评分 </span>
 	  					<span class="right glyphicon glyphicon-chevron-right gray_arrow"></span>
 	  					<span class="right orange sl8" ms-if="d.hss!=''">{{d.hss}}</span>
 	  					<span class="right orange sl8" ms-if="!d.hss">点击填写</span>
