--- a/node/public/gakf/sickDetail.html
+++ b/node/public/gakf/sickDetail.html
@@ -52,10 +52,10 @@
 		  	<span>手术类型</span>
 		  	<span class="right">{{d.operate_type}}</span>
 		  </li>
-		  <li class="list-group-item gray">
+		  <!-- <li class="list-group-item gray">
 		  	<span>护理级别</span>
 		  	<span class="right">{{d.care_level}}</span>
-		  </li>
+		  </li> -->
 		  <li class="list-group-item">
 		  	<span>床号</span>
 			<span class="right">{{d.bed_id}}</span>
