--- a/node/public/gakf/rapt.html
+++ b/node/public/gakf/rapt.html
@@ -63,7 +63,7 @@
 		</div>
 		<div class="">{{d.summary|html}}</div>
 	</div>
-	<nav class="navbar navbar-default navbar-fixed-bottom my-nav my-nav-bottom" >
+	<nav class="navbar navbar-default navbar-fixed-bottom my-nav my-nav-bottom" ms-if="!d.isshow">
 	  <div class="container text-center" style="height: 42px; line-height: 42px;">
 	    <div class="row">
 	    	<div class="col-xs-12">
@@ -77,16 +77,23 @@
 	<script type="text/javascript">
 		require(["store","avalon","index"],function(store){
 			Zhi.detectGesture(document.getElementById('gradeList'), ['tap']);
+			var user=store.get("user");
 			$("#gradeList").on("tap",".checkbox",function(){
-				var temp = $(this).find(".tag");
-				RC.selected(this,temp.attr("alt"));
+				var score="",temp = $(this).find(".tag");
+				if(user.type == "doctor"){
+					score = temp.attr("alt");
+				}
+				RC.selected(this,score);
 			});
 			var selected ;
 			
 			$("#gradeList").on("tap",".radio",function(){
-				var temp = $(this).find(".tag");
+				var score="", temp = $(this).find(".tag");
 				if(selected)RC.remove(selected);
-				RC.selected(this,temp.attr("alt"));
+				if(user.type == "doctor"){
+					score = temp.attr("alt");
+				}
+				RC.selected(this,score);
 				selected = this;
 			});
 
