--- a/node/public/gakf/rapt.html
+++ b/node/public/gakf/rapt.html
@@ -63,7 +63,7 @@
 		</div>
 		<div class="">{{d.summary|html}}</div>
 	</div>
-	<nav class="navbar navbar-default navbar-fixed-bottom my-nav my-nav-bottom" ms-if="!d.isshow">
+	<nav class="navbar navbar-default navbar-fixed-bottom my-nav my-nav-bottom">
 	  <div class="container text-center" style="height: 42px; line-height: 42px;">
 	    <div class="row">
 	    	<div class="col-xs-12">
