--- a/node/public/gakf/sickDetail.html
+++ b/node/public/gakf/sickDetail.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
-	<meta name="viewport" content="width=device-width,initial-scale=1.0 user-scalable=yes"/>
+	<meta name="viewport" content="width=device-width,initial-scale=1.0 user-scalable=no"/>
 	<title>患者信息</title>
 	<link rel="stylesheet" type="text/css" href="./static/css/bootstrap.min.css">
 	<link rel="stylesheet" type="text/css" href="./static/css/index.css">
@@ -19,6 +19,7 @@
 <body ms-controller="test" class="ms-controller">
 
 	<div class="container">
+		<div class="spacer10"></div>
 		<ul class="list-group">
 		  <li class="list-group-item">
 		  	<span>主治医生</span>
@@ -107,11 +108,11 @@
 			<ul class="list-group">
 				<li class="list-group-item gray">
 				  	<span>入院日期</span>
-				  	<input class="right text-right my-input1 gray" ms-duplex="d.in_day" >
+				  	<input type="date" class="right text-right my-input1 gray" ms-duplex="d.in_day" >
 				</li>
 				<li class="list-group-item">
 				  	<span>出院日期</span>
-					<input class="right text-right my-input1" ms-duplex="d.out_day" >
+					<input  type="date" class="right text-right my-input1" ms-duplex="d.out_day" >
 				</li>
 				
 				<li class="list-group-item">
