--- a/node/public/gakf/inpatientSick.html
+++ b/node/public/gakf/inpatientSick.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
-	<meta name="viewport" content="width=device-width,initial-scale=1.0 user-scalable=yes"/>
+	<meta name="viewport" content="width=device-width,initial-scale=1.0,maximum-scale=1.0,user-scalable=0" />
 	<title>患者信息</title>
 	<link rel="stylesheet" type="text/css" href="./static/css/bootstrap.min.css">
 	<link rel="stylesheet" type="text/css" href="./static/css/index.css">
@@ -28,19 +28,19 @@
 		  <li class="list-group-item">
 		  	<span>年龄</span>
 		  	<span class="right">
-		  		<input class=" text-right my-input1" type="text" placeholder="年龄" ms-duplex="d.age"/>岁
+		  		<input class=" text-right my-input1" type="number" placeholder="年龄" ms-duplex="d.age"/>岁
 		  	</span>
 		  </li>
 		  <li class="list-group-item">
 		  	<span>身高</span>
 		  	<span class="right">
-		  		<input class=" text-right my-input1" type="text" placeholder="身高" ms-duplex="d.height"/> cm
+		  		<input class=" text-right my-input1" type="number" placeholder="身高" ms-duplex="d.height"/> cm
 		  	</span>
 		  </li>
 		  <li class="list-group-item">
 		  	<span>体重</span>
 		  	<span class="right">
-		  		<input class=" text-right my-input1" type="text" placeholder="体重" ms-duplex="d.weight"/> kg
+		  		<input class=" text-right my-input1" type="number" placeholder="体重" ms-duplex="d.weight"/> kg
 		  	</span>
 		  </li>
 		  <li class="list-group-item gray my-collapse" >
@@ -76,7 +76,7 @@
 		  </li> -->
 		  <li class="list-group-item">
 		  	<span>床号</span>
-			<input class="right text-right my-input1" type="text" placeholder="床号" ms-duplex="d.bed_id" />
+			<input class="right text-right my-input1" type="number" placeholder="床号" ms-duplex="d.bed_id" />
 		  </li>
 		  <li class="list-group-item gray">
 		  	<span>入院日期</span>
@@ -129,7 +129,7 @@
 			<span style="padding:5px 0px;display: inline-block;">安全用药</span>
 			<ul class="list-group">
 					<li class="list-group-item">
-				  		<a ms-href="/gakf/taboos.html?sick_id={{d.sickId}}">
+				  		<a ms-href="/gakf/taboos.html?sick_id={{d.sickId}}&gender={{d.gender}}">
 		  			  		<span>安全用药量表</span>
 		  					<span class="right glyphicon glyphicon-chevron-right gray_arrow"></span>
 		  					<span class="right orange sl8">点击填写</span>
@@ -249,9 +249,11 @@
 				p.find(".detail").html($(this).html());
 				p.find(".detailInput").val($(this).attr("alt"));
 				p.find(".collapse").collapse('hide');
-				setUrl();
 			});
-			
+			$("#operate_type").on("touchend",".secondCon",function () {
+				setUrl();
+			})
+
 			// $(".close").on("touchstart",function(){
 		 //    	$(this).parent().parent().remove();
 		 //    });
