--- a/node/public/gakf/register.html
+++ b/node/public/gakf/register.html
@@ -29,13 +29,13 @@
 				<input type="password" class="form-control my-input repassword" id="repassword" name="login_repwd" placeholder="确认密码"/>
 			</div>
 			<div class="form-group">
-			  	<input class="form-control my-input user" type="text" placeholder="年龄 (岁)" name="age"/>
+			  	<input class="form-control my-input user" type="number" placeholder="年龄 (岁)" name="age"/>
 			</div>
 			<div class="form-group">
-			  	<input class="form-control my-input user" type="text" placeholder="身高 (cm)" name="height"/>
+			  	<input class="form-control my-input user" type="number" placeholder="身高 (cm)" name="height"/>
 			</div>
 			<div class="form-group">
-			  	<input class="form-control my-input user" type="text" placeholder="体重 (kg)" name="weight"/>
+			  	<input class="form-control my-input user" type="number" placeholder="体重 (kg)" name="weight"/>
 			</div>
 
 			<div class="spacer30"></div>
