--- a/node/public/gakf/hss_left.html
+++ b/node/public/gakf/hss_left.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
-	<meta name="viewport" content="width=device-width,initial-scale=1.0 user-scalable=yes"/>
+	<meta name="viewport" content="width=device-width,initial-scale=1.0 user-scalable=no"/>
 	<title>膝关节HHS评分</title>
 	<link rel="stylesheet" type="text/css" href="./static/css/bootstrap.min.css">
 	<link rel="stylesheet" type="text/css" href="./static/css/index.css">
@@ -44,7 +44,7 @@
 			  		<span class="qtitle">{{el.key}}</span>
 			  	</div>
 			  	<div class="col-xs-4">
-			  		<input type="text" value="" style="width:100%" class="inputvalue" placeholder="请输入" ms-blur="blur" >
+			  		<input type="number" value="" style="width:100%" class="inputvalue" placeholder="请输入" ms-blur="blur" >
 			  	</div>
 			  </li>
 			</ul>
