--- a/node/public/gakf/caprini.html
+++ b/node/public/gakf/caprini.html
@@ -23,6 +23,10 @@
 	  </div>
 	</nav>
 	<div style="margin-top:45px;"></div>
+	
+	<div class="score" ms-if="d.score">
+		总评分  <span >{{d.score}}</span> 分  <span>{{d.level}}</span>
+	</div>
 	</div>
 	<div class="" id="gradeList">
 		<div class="spacer5" ms-if="d.summary==''"></div>
