--- a/node/public/gakf/hss_left.html
+++ b/node/public/gakf/hss_left.html
@@ -24,6 +24,9 @@
 		  </div>
 		</nav>
 		<div style="margin-top:45px;"></div>
+		<div class="score" ms-if="d.score" ms-if="d.isshow">
+			总分：<span >{{d.score}}</span> 分 ， 等级：<span>{{d.level}}</span>
+		</div>
 		<div class="spacer5" ms-if="d.summary==''"></div>
 		<div  ms-repeat-el="d.items"  ms-attr-alt="{{$index}}">
 			<span class="my-title">{{el.title}}</span>
