--- a/node/public/gakf/sickDetail.html
+++ b/node/public/gakf/sickDetail.html
@@ -79,8 +79,8 @@
 		  		<a ms-href="/gakf/cxgwpg.html?sick_id={{d.sickId}}">
   			  		<span>出血评估 </span>
   					<span class="right glyphicon glyphicon-chevron-right gray_arrow"></span>
-  					<span class="right orange sl8" ms-if="d.cxpg!=''">{{d.cxpg}}</span>
-  					<span class="right orange sl8" ms-if="!d.cxpg">2项目出血风险</span>
+  					<span class="right orange sl8" ms-if="d.cxpg!=''">{{d.cxpg}}项目出血风险</span>
+  					<span class="right orange sl8" ms-if="!d.cxpg">无出血风险项</span>
 		  		</a>
 		 	</li>
 		</ul>
@@ -143,6 +143,14 @@
 	  					<span class="right orange sl8" ms-if="d.hss_left">左腿：{{d.hss_left}}</span>
 	  					<span class="right orange sl8" ms-if="d.hss_right">右腿：{{d.hss_right}}</span>
 	  					<span class="right orange sl8" ms-if="!d.hss_right && !d.hss_left">点击填写</span>
+			  		</a>
+			 	</li>
+			 	<li class="list-group-item">
+			  		<a ms-href="/gakf/harris.html?sick_id={{d.sickId}}">
+	  			  		<span>髋关节Harris评分 </span>
+	  					<span class="right glyphicon glyphicon-chevron-right gray_arrow"></span>
+	  					<span class="right orange sl8" ms-if="d.harris">{{d.harris}}</span>
+	  					<span class="right orange sl8" ms-if="!d.harris">点击填写</span>
 			  		</a>
 			 	</li>
 			</ul>
