--- a/node/public/gakf/sickDetail.html
+++ b/node/public/gakf/sickDetail.html
@@ -79,7 +79,7 @@
 		  		<a ms-href="/gakf/cxgwpg.html?sick_id={{d.sickId}}">
   			  		<span>出血评估 </span>
   					<span class="right glyphicon glyphicon-chevron-right gray_arrow"></span>
-  					<span class="right orange sl8" ms-if="d.cxpg!=''">{{d.cxpg}}项目出血风险</span>
+  					<span class="right orange sl8" ms-if="d.cxpg">{{d.cxpg}}项目出血风险</span>
   					<span class="right orange sl8" ms-if="!d.cxpg">无出血风险项</span>
 		  		</a>
 		 	</li>
