--- a/node/public/gakf/sickDetail.html
+++ b/node/public/gakf/sickDetail.html
@@ -69,8 +69,8 @@
 		  		<a ms-href="/gakf/rapt.html?sick_id={{d.sickId}}">
   			  		<span>VTE评分</span>
   					<span class="right glyphicon glyphicon-chevron-right gray_arrow"></span>
-  					<span class="right orange sl8" ms-if="d.caprini!=''">关节:{{d.caprini}}</span>
-  					<span class="right orange sl8" ms-if="d.rapt!=''"> 创伤:{{d.rapt}}</span>
+  					<span class="right orange sl8" ms-if="d.caprini!=''">关节:{{d.caprini_score}}分,等级:{{d.caprini}}</span>
+  					<span class="right orange sl8" ms-if="d.rapt!=''"> 创伤:{{d.rapt_score}}分,等级:{{d.rapt}}</span>
   					<span class="right orange sl8" ms-if="d.caprini == ''&& d.rapt==''">无评分</span>
 		  		</a>
 		 	</li>
