add pills and setting pages

--- a/node/public/gakf/doctorFlow.html
+++ b/node/public/gakf/doctorFlow.html
@@ -13,7 +13,7 @@
 <body ms-controller="test" class="ms-controller">
 	<div class="container">
 
-			<a ms-href="sickDetail.html?id={{el.id}}&isout=true" style="display: block;" ms-repeat-el="d">
+			<a ms-href="sickDetail.html?id={{el.id}}&isout=true&iso={{el.out_dur}}" style="display: block;" ms-repeat-el="d">
 			<div class="panel panel-default my-panel" style="margin-top: 10px;"  >
 				  <div class="panel-heading " style="background: #fff;">
 				  	<div class="row">
