--- a/node/public/gakf/pills.html
+++ b/node/public/gakf/pills.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width,initial-scale=1.0 user-scalable=no"/>
-	<title>随访信息</title>
+	<title>服药提醒</title>
 	<link rel="stylesheet" type="text/css" href="./static/css/bootstrap.min.css">
 	<link rel="stylesheet" type="text/css" href="./static/css/index.css">
 
@@ -170,6 +170,10 @@
 	///sick/setnotify post sick_id,drug_name,times,days,drug_count
 		require(["template","store"],function(template,store){
 			var data = {},temp=store.get("user");
+			if(temp.type == "doctor") {
+				$("body").html("<h4 class='text-center'>患者设置</h4>");
+				return ;
+			}
 			function render(dom,data){
 				var dd = data;
 				var tpl = dom.html();
