--- a/node/public/gakf/setting.html
+++ b/node/public/gakf/setting.html
@@ -45,7 +45,7 @@
 		</ul>
 		<div class="spacer10"></div>
 		<ul class="list-group">
-			 <li class="list-group-item text-center" ms-if="d.type">
+			 <li class="list-group-item text-center" ms-if="d.userType">
 			  	<a href="javascript:void(0)" id="loginout">退出登录</a>
 			  </li>
 		</ul>
