fix rapt and hss score and setting loginout

--- a/node/public/gakf/hss_left.html
+++ b/node/public/gakf/hss_left.html
@@ -24,7 +24,7 @@
 		  </div>
 		</nav>
 		<div style="margin-top:45px;"></div>
-		<div class="score" ms-if="d.score" ms-if="d.isshow">
+		<div class="score" ms-if="d.score" ms-if="d.isshow && d.score">
 			总分：<span >{{d.score}}</span> 分 ， 等级：<span>{{d.level}}</span>
 		</div>
 		<div class="spacer5" ms-if="d.summary==''"></div>
