--- a/node/public/gakf/rapt.html
+++ b/node/public/gakf/rapt.html
@@ -124,6 +124,7 @@
 					d.isshow = data.isshow;
 					d.id = id;
 					d.type = temp.type;
+					d.score = tempobj.score;
 					RC.setvmodel(d,tempobj);
 					RC.setItem(d);
 					
