--- a/node/public/gakf/print.html
+++ b/node/public/gakf/print.html
@@ -28,7 +28,8 @@
 	  	<div class="row">
 	  		<div class="col-xs-2"></div>
 	  		<div class="col-xs-8">
-	  			<img ms-src="{{d.ewurl}}" style="width:162px;">
+	  			<!-- <img ms-src="{{d.ewurl}}" style="width:162px;"> -->
+	  			<div id="qrcode"></div>
 	  		</div>
 	  		<div class="col-xs-2"></div>
 	  	</div>
@@ -45,7 +46,7 @@
 	  </div>
 	</nav>
 	<script type="text/javascript">
-	require(["avalon"],function(){
+	require(["qrcode","avalon"],function(){
 		var data = {
 			ewurl:"./static/images/ew.png"
 		},id;
@@ -77,6 +78,7 @@
 
 	    		}
 			}); 
+	    $('#qrcode').qrcode({width: 162,height: 162,text: "http://www.guanaikangfu.com/gakf/sickDetail.html?id="+id});
 	});
 	</script>
 </body>
