--- a/node/public/gakf/sick.html
+++ b/node/public/gakf/sick.html
@@ -32,6 +32,11 @@
 			  </div>
 			</div>
 		</a>
+		<nav class="navbar navbar-default navbar-fixed-bottom my-nav my-nav-bottom">
+		  <div class="container">
+		    <span class="glyphicon glyphicon-qrcode text right" ></span>
+		  </div>
+		</nav>
 		<div class="row ads">
 			<div class="col-xs-12">
 				<span>此处显示广告</span>
@@ -39,7 +44,7 @@
 			</div>
 		</div>
 	</div>
-
+	
 	<script type="text/javascript">
 	require(["store","avalon"],function(store){
 			var data = [],doctor_id = store.get("user").id;
