--- a/node/public/gakf/sick.html
+++ b/node/public/gakf/sick.html
@@ -37,12 +37,12 @@
 		    <span class="glyphicon glyphicon-qrcode text right" id="openre" ></span>
 		  </div>
 		</nav>
-		<div class="row ads">
+		<!-- <div class="row ads">
 			<div class="col-xs-12">
 				<span>此处显示广告</span>
 				<span class="close right">x</span>
 			</div>
-		</div>
+		</div> -->
 	</div>
 	<script type="text/javascript">
 	require(["store","wx","avalon"],function(store,wx){
@@ -71,12 +71,12 @@
 		    });
 		    $.ajax({
 		    	type:"get",
-		    	url:"/user/weixin_sign?url=http://guanaikangfu.com/gakf/sick.html",
+		    	url:"/user/weixin_sign?url=www.guanaikangfu.com",
 		    	dataType: "json", 
 				success: function(obj){
-					var dd = obj;
+					var dd = obj.content;
 					wx.config({
-					    debug: false,
+					    debug: true,
 					    appId: 'wxaf3a162fe7e04d37',
 					    timestamp: dd.timestamp,
 					    nonceStr: dd.nonceStr,
