--- a/node/public/gakf/sick.html
+++ b/node/public/gakf/sick.html
@@ -37,12 +37,12 @@
 		    <span class="glyphicon glyphicon-qrcode text right" id="openre" ></span>
 		  </div>
 		</nav>
-		<!-- <div class="row ads">
-			<div class="col-xs-12">
+		<div class="row ads">
+			<div class="col-xs-12" style="padding-right:0px;">
 				<span>此处显示广告</span>
-				<span class="close right">x</span>
+				<span class="close right" style="width: 20px; height: 20px; text-align: center; line-height: 20px">x</span>
 			</div>
-		</div> -->
+		</div>
 	</div>
 	<script type="text/javascript">
 	require(["store","wx","avalon"],function(store,wx){
