--- a/node/public/gakf/print.html
+++ b/node/public/gakf/print.html
@@ -38,7 +38,7 @@
 	  <div class="container text-center" style="height: 42px; line-height: 42px;">
 	    <div class="row">
 	    	<div class="col-xs-12 text-center">
-	    		<a ms-href="/gakf/check.html?sick_id={{d.sickId}}&doctor_id={{d.doctor_id}}">
+	    		<a href="javascript:void(0)">
 			    	<span style="color:#fff;" >打印</span>
 			    </a>
 	    	</div>
