--- a/node/public/gakf/day.html
+++ b/node/public/gakf/day.html
@@ -11,19 +11,45 @@
 	<script type="text/javascript" src="./static/js/main.js"></script>
 	<script type="text/javascript" src="./static/js/resource.js"></script>
 	<script type="text/javascript" src="./static/js/day.js"></script>
+	<style type="text/css">
+		img{width:100%; height: 100%;padding:10px 0px;}
+		.questionCon{
+			padding: 15px;
+    		line-height: 25px;
+		}
+		h3{text-align: center;}
+	</style>
 </head>
 <body>
-	<div class="" id="questionCon">
-		
+	<div class="questionCon" id="questionCon">
 	</div>
 	<script type="text/html" id="test">
-			<h3>{{title}}</h3>
-			<div>{{content}}</div>
+			<div class="row">
+				<div class="col-xs-12 text-center">
+					<h4>{{title}}</h4>
+					<div class="spacer10"></div>
+				</div>
+			</div>
+			<div class="row">
+				<div class="col-xs-12">
+					{{content}}
+				</div>
+			</div>
+			<div class="row">
+				{{each img as vv j}}
+			  		<div class="col-xs-12">
+			  			<img src={{vv.image}}>
+			  		</div>
+			  		<div class="col-xs-12 text-center" >
+			  			<span>{{vv.imgcon}}</span>
+			  		</div>
+		  		{{/each}}
+			</div>
 	</script>
 	<script type="text/javascript">
 		require(["template","store"],function(template,store){
 			var temp = RC.parseOptions(window.location.href),day = temp.day;
-			var data = dayArray[+day-1];
+			var data = dayArray[day];
 			function render(dom,data){
 				var dd = data;
 
